--- a/XboxBuddy/Main.storyboard
+++ b/XboxBuddy/Main.storyboard
@@ -355,39 +355,20 @@
                                 <rect key="frame" x="0.0" y="124" width="320" height="157"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Prime Evil" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="198" translatesAutoresizingMaskIntoConstraints="NO" id="FDz-Fd-cyy">
-                                        <rect key="frame" x="13" y="17" width="198" height="25"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Prime Evil Normal" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="190" translatesAutoresizingMaskIntoConstraints="NO" id="FDz-Fd-cyy">
+                                        <rect key="frame" x="21" y="20" width="190" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="198" id="boQ-72-RbH"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="21"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="75W-Da-h8C">
                                         <rect key="frame" x="239" y="108" width="30" height="29"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="66"/>
-                                        <color key="textColor" red="0.27367539454003775" green="0.51676100127551017" blue="0.12052321918228205" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kill Diablo in Normal mode without dying more than five times and without using magic." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="294" translatesAutoresizingMaskIntoConstraints="NO" id="Gws-ZB-S3x">
-                                        <rect key="frame" x="12" y="108" width="294" height="37"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="02/01/14" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ye-x8-sXa">
-                                        <rect key="frame" x="20" y="163" width="164" height="14"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="75W-Da-h8C">
-                                        <rect key="frame" x="232" y="155" width="30" height="29"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="29" id="ZYe-Mq-MNc"/>
+                                            <constraint firstAttribute="width" constant="30" id="xt0-Od-APv"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="14"/>
                                         <state key="normal" title="Like">
                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -416,27 +397,23 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="9EC-oV-ooN"/>
                                             <constraint firstAttribute="width" constant="70" id="TAk-9v-XTM"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="b3P-wr-0Ej"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="gXc-lU-Dyy"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kill Diablo in Normal mode without dying more than five times and without using magic." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="198" translatesAutoresizingMaskIntoConstraints="NO" id="Gws-ZB-S3x">
-                                        <rect key="frame" x="13" y="40" width="198" height="64"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kill Diablo in Normal mode without dying more than five times and without using magic." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="197" translatesAutoresizingMaskIntoConstraints="NO" id="Gws-ZB-S3x">
+                                        <rect key="frame" x="14" y="40" width="197" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="198" id="6XZ-PP-YNp"/>
-                                            <constraint firstAttribute="height" constant="64" id="A93-5E-165"/>
+                                            <constraint firstAttribute="height" constant="50" id="A93-5E-165"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50 G" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnC-mI-c7e">
-                                        <rect key="frame" x="20" y="104" width="191" height="38"/>
+                                        <rect key="frame" x="125" y="94" width="86" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="191" id="6sb-rp-5gI"/>
-                                            <constraint firstAttribute="height" constant="38" id="KJ4-Mn-Gx3"/>
+                                            <constraint firstAttribute="height" constant="35" id="KJ4-Mn-Gx3"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="40"/>
                                         <color key="textColor" red="0.17562096068768587" green="0.56841916454081631" blue="0.27382051165096849" alpha="1" colorSpace="calibratedRGB"/>
@@ -447,20 +424,19 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="75W-Da-h8C" firstAttribute="top" secondItem="WSZ-Wf-8bx" secondAttribute="bottom" constant="8" id="38y-ja-bEb"/>
-                                    <constraint firstItem="Gws-ZB-S3x" firstAttribute="leading" secondItem="4FR-ZZ-a4i" secondAttribute="leading" constant="13" id="4eT-bj-fls"/>
+                                    <constraint firstItem="Gws-ZB-S3x" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4FR-ZZ-a4i" secondAttribute="leading" constant="10" id="5hO-Hv-pCg"/>
                                     <constraint firstItem="WSZ-Wf-8bx" firstAttribute="leading" secondItem="FDz-Fd-cyy" secondAttribute="trailing" constant="20" id="6G8-7Z-ETI"/>
-                                    <constraint firstItem="Gws-ZB-S3x" firstAttribute="top" secondItem="4FR-ZZ-a4i" secondAttribute="top" constant="40" id="6ni-Mf-zUi"/>
-                                    <constraint firstItem="75W-Da-h8C" firstAttribute="leading" secondItem="EnC-mI-c7e" secondAttribute="trailing" constant="28" id="9sX-TU-GIL"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Rb-zO-Asm" secondAttribute="trailing" constant="29" id="9U9-ef-mWi"/>
                                     <constraint firstItem="2Rb-zO-Asm" firstAttribute="top" secondItem="WSZ-Wf-8bx" secondAttribute="bottom" constant="13" id="AN6-1E-71v"/>
-                                    <constraint firstItem="FDz-Fd-cyy" firstAttribute="top" secondItem="4FR-ZZ-a4i" secondAttribute="top" constant="17" id="FhC-gr-aeI"/>
+                                    <constraint firstItem="FDz-Fd-cyy" firstAttribute="top" secondItem="4FR-ZZ-a4i" secondAttribute="top" constant="20" id="FhC-gr-aeI"/>
                                     <constraint firstAttribute="height" constant="157" id="GDf-Of-TT8"/>
-                                    <constraint firstItem="2Rb-zO-Asm" firstAttribute="leading" secondItem="75W-Da-h8C" secondAttribute="trailing" constant="2" id="IQB-1A-rNZ"/>
-                                    <constraint firstItem="FDz-Fd-cyy" firstAttribute="leading" secondItem="4FR-ZZ-a4i" secondAttribute="leading" constant="13" id="JRv-Df-Nxw"/>
-                                    <constraint firstItem="EnC-mI-c7e" firstAttribute="leading" secondItem="4FR-ZZ-a4i" secondAttribute="leading" constant="20" id="KEa-Mx-UgS"/>
+                                    <constraint firstItem="75W-Da-h8C" firstAttribute="leading" secondItem="EnC-mI-c7e" secondAttribute="trailing" constant="28" id="Gu8-GL-A82"/>
                                     <constraint firstItem="WSZ-Wf-8bx" firstAttribute="leading" secondItem="Gws-ZB-S3x" secondAttribute="trailing" constant="20" id="Qi3-tw-keS"/>
-                                    <constraint firstItem="EnC-mI-c7e" firstAttribute="top" secondItem="Gws-ZB-S3x" secondAttribute="bottom" id="YEz-mi-wte"/>
+                                    <constraint firstItem="2Rb-zO-Asm" firstAttribute="leading" secondItem="75W-Da-h8C" secondAttribute="trailing" constant="2" id="ThQ-Xm-XDV"/>
+                                    <constraint firstItem="FDz-Fd-cyy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4FR-ZZ-a4i" secondAttribute="leading" constant="10" id="XkI-Cd-HWv"/>
+                                    <constraint firstItem="EnC-mI-c7e" firstAttribute="top" secondItem="Gws-ZB-S3x" secondAttribute="bottom" constant="4" id="YEz-mi-wte"/>
+                                    <constraint firstItem="Gws-ZB-S3x" firstAttribute="top" secondItem="FDz-Fd-cyy" secondAttribute="bottom" constant="-5" id="aVc-Rj-Ky3"/>
                                     <constraint firstItem="WSZ-Wf-8bx" firstAttribute="top" secondItem="4FR-ZZ-a4i" secondAttribute="top" constant="30" id="k5n-ST-lu8"/>
-                                    <constraint firstAttribute="trailing" secondItem="2Rb-zO-Asm" secondAttribute="trailing" constant="29" id="mcb-xM-7ZE"/>
                                     <constraint firstAttribute="trailing" secondItem="WSZ-Wf-8bx" secondAttribute="trailing" constant="19" id="vw1-Bx-XJA"/>
                                 </constraints>
                             </view>
